--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.6.11"
+    "express-session": "^1.16.2",
+    "mongoose": "^5.6.11",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
