--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.6.11",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
